# floton

./: CMakeLists.txt  README.md
include/: AtomicCache.h  AtomicShared.h  BinaryDefinitions.h  ObjectTypes.h  Rows.h  SocketFormat.h  Tables.h  TcpServer.h
src/: CMakeLists.txt  ObjectTypes.cpp  Rows.cpp  SocketFormat.c  TcpServer.cpp
src/main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
